// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render normal 1`] = `
.c0 {
  font-family: inherit;
  border: 1px solid #d9d9d9;
  border-radius: 4px;
  position: relative;
  display: inline-block;
  padding: 2px 3px;
  height: 28px;
  cursor: text;
  font-size: 12px;
  line-height: 1.5;
  background-color: #fff;
  background-image: none;
  margin: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  color: rgba(0,0,0,0.65);
  box-shadow: ;
}

.c0:hover {
  border-color: #49a9ee;
}

.c1 {
  border: none;
  width: 100%;
  height: 100%;
  outline: none;
  margin: 0;
  padding: 0;
}

<span
  className="c0"
>
  <input
    className="c1"
    defaultValue={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value={undefined}
  />
</span>
`;

exports[`Input render state.focued 1`] = `
.c0 {
  font-family: inherit;
  border: 1px solid #d9d9d9;
  border-radius: 4px;
  position: relative;
  display: inline-block;
  padding: 2px 3px;
  height: 28px;
  cursor: text;
  font-size: 12px;
  line-height: 1.5;
  background-color: #fff;
  background-image: none;
  margin: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  color: rgba(0,0,0,0.65);
  box-shadow: 0 0 0 2px rgba(16,142,233,.2);
}

.c0:hover {
  border-color: #49a9ee;
}

.c1 {
  border: none;
  width: 100%;
  height: 100%;
  outline: none;
  margin: 0;
  padding: 0;
}

<span
  className="c0"
>
  <input
    className="c1"
    defaultValue={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value={undefined}
  />
</span>
`;

exports[`Input render state.focued 2`] = `
.c0 {
  font-family: inherit;
  border: 1px solid #d9d9d9;
  border-radius: 4px;
  position: relative;
  display: inline-block;
  padding: 2px 3px;
  height: 28px;
  cursor: text;
  font-size: 12px;
  line-height: 1.5;
  background-color: #fff;
  background-image: none;
  margin: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  color: rgba(0,0,0,0.65);
  box-shadow: ;
}

.c0:hover {
  border-color: #49a9ee;
}

.c1 {
  border: none;
  width: 100%;
  height: 100%;
  outline: none;
  margin: 0;
  padding: 0;
}

<span
  className="c0"
>
  <input
    className="c1"
    defaultValue={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value={undefined}
  />
</span>
`;
